--- a/public/stats.html
+++ b/public/stats.html
@@ -93,7 +93,7 @@
             </table>
           </div>
 
-          <div class="col-lg-6 mb-5">
+          <!-- <div class="col-lg-6 mb-5">
             <h2 class="heading">Top Assists</h2>
             <table
               id="top-assists-players"
@@ -108,10 +108,10 @@
                 </tr>
               </thead>
               <tbody>
-                <!-- Data will be inserted here by JavaScript -->
+                 Data will be inserted here by JavaScript 
               </tbody>
             </table>
-          </div>
+          </div> -->
         </div>
       </div>
 
