--- a/public/matches.html
+++ b/public/matches.html
@@ -54,12 +54,13 @@
                 <ul
                   class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block"
                 >
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li class="active">
-                    <a href="matches.html" class="nav-link">Matches</a>
-                  </li>
-                  <li>
-                    <a href="stats.html" class="nav-link">Stats</a>
+                <li class="active">
+                  <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li><a href="matches.html" class="nav-link">Matches</a></li>
+                <li><a href="stats.html" class="nav-link">Stats</a></li>
+                <li><a href="highlights.html" class="nav-link">highlights</a></li>
+                <li><a href="news.html" class="nav-link">News</a></li>
                   </li>
                 </ul>
               </nav>
