--- a/public/players.html
+++ b/public/players.html
@@ -34,11 +34,13 @@
             <div class="ml-auto">
               <nav class="site-navigation position-relative text-right" role="navigation">
                 <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="matches.html" class="nav-link">Matches</a></li>
-                  <li><a href="stats.html" class="nav-link">Stats</a></li>
-                  <li><a href="video.html" class="nav-link">Videos</a></li>
-                  <li class="active"><a href="players.html" class="nav-link">Players</a></li>
+                    <li class="active">
+                        <a href="index.html" class="nav-link">Home</a>
+                      </li>
+                      <li><a href="matches.html" class="nav-link">Matches</a></li>
+                      <li><a href="stats.html" class="nav-link">Stats</a></li>
+                      <li><a href="highlights.html" class="nav-link">highlights</a></li>
+                      <li><a href="news.html" class="nav-link">News</a></li>
                 </ul>
               </nav>
               <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white">
