--- a/public/stats.html
+++ b/public/stats.html
@@ -58,8 +58,14 @@
                   <li>
                     <a href="matches.html" class="nav-link">Matches</a>
                   </li>
+                  <li>
+                    <a href="highlights.html" class="nav-link">highlights</a>
+                  </li>
                   <li class="active">
                     <a href="stats.html" class="nav-link">Stats</a>
+                  </li>
+                  <li>
+                    <a href="news.html" class="nav-link">News</a>
                   </li>
                 </ul>
               </nav>
